# -4.3inch_ESP32-4827S043_PIO

./: CMakeLists.txt  filelist.txt  platformio.ini
lib/: lv_conf.h  touch.h
lib/Gt911-arduino-main/examples/TouchPrint/: TouchPrint.ino
lib/Lvgl/: lv_conf.h
lib/RTClib-master/examples/ds3231/: ds3231.ino
src/: CMakeLists.txt  filelist.txt  main.cpp  touch.h  ui.c  ui.h  ui_events.c  ui_events.h
src/components/: ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_settimg.c  ui_comp_settimg.h
src/fonts/: ui_font_Font1.c  ui_font_Font12.c  ui_font_Font16.c  ui_font_Font20.c  ui_font_Font48.c  ui_font_kanit28.c  ui_font_kanit30.c
src/images/: ui_img_11_png.c  ui_img_1711361369.c  ui_img_1986391116.c  ui_img_427252146.c  ui_img_602819814.c  ui_img_602820839.c  ui_img_602825187.c  ui_img_602835949.c  ui_img_bk_new_png.c  ui_img_bk_png.c  ui_img_botttt_png.c  ui_img_do_png.c  ui_img_filter_2_png.c  ui_img_filter_png.c  ui_img_up_png.c
src/screens/: ui_deplay.c  ui_stimeseting.c  ui_swifiseting.c
